Fix resume style on mobile

--- a/source/stylesheets/components/_cv.sass
+++ b/source/stylesheets/components/_cv.sass
@@ -30,30 +30,44 @@
     bottom: 0
     text-align: right
     color: #aaa
+  @include respond-to('iphone')
+    .cv_header_name_block
+      .cv_header_chi_name
+        font-size: 40px
+      .cv_header_eng_name
+        font-size: 18px
+      .cv_header_job_title
+        font-size: 16px
+    .cv_header_desc_block
+      display: none
 
 .cv_experience, .cv_community, .cv_education, .cv_about_me
   margin-top: 50px
   h2
     position: relative
-    font-size: 36px
-    line-height: 52px
-    font-weight: bold
-    margin-bottom: 40px
-    margin-top: 60px
-    color: #FFBB00
-    text-align: center
-    &:before, &:after
-      content: ""
+    margin-top: 80px
+    margin-bottom: 60px
+    &:before
+      content: attr(title)
       display: block
       position: absolute
-      top: 22px
-      width: 200px
+      top: -20px
+      left: 50%
+      margin-left: -123px
+      padding: 0 20px
+      font-size: 36px
+      line-height: 52px
+      font-weight: bold
+      color: #FFBB00
+      text-align: center
+      background-color: $white
+    &:after
+      content: ""
+      display: block
+      width: 100%
       height: 3px
       background: #FFBB00
-    &:before
-      left: 0
-    &:after
-      right: 0
+
   ul
     li
       margin-bottom: 25px
@@ -84,3 +98,18 @@
         margin-right: 15px
         padding-bottom: 3px
         color: $c-blue
+      @include respond-to('iphone')
+        .left_block, .right_block
+          width: 100%
+          text-align: left
+          padding: 0
+          h3, .during_time
+            display: inline-block
+            margin-right: 10px
+          h3
+            font-weight: bold
+            font-size: 14px
+          .company_name, .community_name
+            font-size: 18px
+          p, p a
+            font-size: 12px
